--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,6 +1,3 @@
-[core] 
-    editor = nvim
-
 [user]
     name = JCHacking
     email = juancruzmencia@gmail.com
@@ -19,6 +16,7 @@
 
 [core]
     autocrlf = input
+    editor = nvim
     eol = lf
     pager = delta
 
@@ -43,7 +41,7 @@
 [pretty]
     log = %Cred%h%Creset - %C(yellow)%ai%Creset -%C(auto)%d%Creset %s %C(bold blue)<%an>%Creset
 
-[recive]
+[receive]
     fsckobjects = true
 
 [status]
