feat(sworkstyle): Add virt-manager icon
Change icon in waybar

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -90,7 +90,7 @@
     },
     "disk#virt": {
         "path": "/mnt/virt",
-        "format": "▣ {percentage_used}%",
+        "format": " {percentage_used}%",
         "states": {
             "critical": 90
         }
