--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -102,7 +102,7 @@
         "format-ethernet": "  ↑ {bandwidthUpBits} ↓ {bandwidthDownBits}",
         "tooltip-format-ethernet": "{ifname}: {ipaddr}/{cidr} via {gwaddr}",
 
-        "format-wifi": "  ↑ {bandwidthUpBits} ↓ bandwidthDownBits}",
+        "format-wifi": "  ↑ {bandwidthUpBits} ↓ {bandwidthDownBits}",
         "tooltip-format-wifi": "{ifname}: {essid} {ipaddr}/{cidr} via {gwaddr}"
     },
 
