feat: Use dotter instead stow for manage dotfiles
Simplify configuration with home directory

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -1,7 +1,7 @@
 [user]
-    name = JCHacking
-    email = juancruzmencia@gmail.com
-    signingkey = juancruzmencia@gmail.com
+    name = {{username}}
+    email = {{email}}
+    signingkey = {{email}}
 
 [include]
     path = ~/.config/delta/config
