fix: Fix apply dotfiles with templates

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -27,7 +27,8 @@ zsh = "~/"
 
 [default.variables]
 username = "JCHacking"
+username_lowercase = "jchacking"
 email = "juancruzmencia@gmail.com"
 
 [settings]
-default_target_type = "symbolic"
+default_target_type = "automatic"
