--- a/git/config
+++ b/git/config
@@ -1,7 +1,7 @@
 [user]
-    name = {{username}}
-    email = {{email}}
-    signingkey = {{email}}
+    name = {{git.username}}
+    email = {{git.email}}
+    signingkey = {{git.email}}
 
 [include]
     path = ~/.config/delta/config
