fix(sway): Fix work laptop monitor configuration

--- a/.dotter/llw-185701.toml
+++ b/.dotter/llw-185701.toml
@@ -24,7 +24,7 @@ packages = [
 ]
 
 [files]
-"sway/monitor.work-laptop" = "~/.config/sway/monitor"
+"sway/monitor.llw-185701" = "~/.config/sway/monitor"
 
 [variables]
 git.username = "jmencianaranjo-ionos"
