--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -40,7 +40,7 @@ git.email = "juancruzmencia@gmail.com"
 "mako/config" = "~/.config/mako/config"
 
 [nvim.files]
-"nvim/lua" = "~/.config/nvim/lua"
+"nvim/lua" = "~/.config/nvim/lua/"
 "nvim/init.lua" = "~/.config/nvim/init.lua"
 
 [podman.files]
