fix(waybar): Start the week on Monday on the calendar

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -43,12 +43,13 @@
         "calendar": {
             "mode": "month",
             "mode-mon-col": 3,
+            "iso8601": true,
             "format": {
                 "months": "<span color='#1976d2'><b>{}</b></span>",
                 "weekdays": "<span color='#1976d2'><b>{}</b></span>",
                 "days": "<span color='#fafafa'><b>{}</b></span>",
                 "today": "<span color='#1976d2'><b>{}</b></span>",
-                "weeks": "<span color='#1976d2'><b>W{:%W}</b></span>"
+                "weeks": "<span color='#1976d2'><b>{}</b></span>"
             },
             "weeks-pos": "right",
             "on-scroll": 1,
