--- a/.dotter/jchacking-pc.toml
+++ b/.dotter/jchacking-pc.toml
@@ -14,12 +14,12 @@ packages = [
   "podman",
   "ssh",
   "starship",
+  "swappy",
   "sway",
   "swaylock",
   "sworkstyle",
   "uwsm",
   "waybar",
-  "wayscriber",
   "wofi",
   "xdg",
   "zsh",
