--- a/.dotter/llw-185701.toml
+++ b/.dotter/llw-185701.toml
@@ -13,12 +13,12 @@ packages = [
   "podman",
   "ssh",
   "starship",
+  "swappy",
   "sway",
   "swaylock",
   "sworkstyle",
   "uwsm",
   "waybar",
-  "wayscriber",
   "wofi",
   "xdg",
   "zsh",
