feat(git): Add git lfs configuration

--- a/git/config
+++ b/git/config
@@ -29,6 +29,12 @@
 [fetch]
     fsckobjects = true
 
+[filter "lfs"]
+    smudge = git-lfs smudge -- %f
+    process = git-lfs filter-process
+    clean = git-lfs clean -- %f
+    required = true
+
 [init]
     defaultBranch = main
 
